# pyxu_finufft

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  tox.ini
doc/: conf.py  index.rst  nitpick-exceptions  references.rst
doc/api/: index.rst  math.rst  operator.rst
doc/examples/: placeholder.ipynb
doc/guide/: index.rst
src/pyxu_finufft/: __init__.py
src/pyxu_finufft/math/: __init__.py  _gpu.py
src/pyxu_finufft/operator/: __init__.py  nufft.py
src/pyxu_finufft/operator/func/: __init__.py
src/pyxu_finufft/operator/linop/: __init__.py  nufft.py
src/pyxu_finufft_tests/: test_math.py
src/pyxu_finufft_tests/operator/: test_nufft1.py  test_nufft2.py  test_nufft3.py
src/pyxu_finufft_tests/test_operator/: test_func.py  test_linop.py
