[metadata]
name = pyxu-finufft

description = Pyxu bindings to the Flatiron Institute Non-uniform Fast Fourier Transform (FINUFFT) library
long_description = file: README.rst
long_description_content_type = text/x-rst

author = Sepand KASHANI
author_email = sepand@kashani.ch
license = MIT
license_files = LICENSE
classifiers =
    Framework :: Pycsou
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing


# add your package requirements here
[options]
install_requires =
    pyxu
python_requires = >= 3.10, < 3.12
include_package_data = True
package_dir =
    = src
setup_requires = setuptools_scm

# Note the `_` underscore to overload a base Pyxu class.
[options.entry_points]
pyxu.math =
    eigh = pyxu_finufft:eigh
pyxu.operator.linop =
    Flip = pyxu_finufft:Flip
pyxu.operator.func =
    _NullFunc = pyxu_finufft:NullFunc



[options.extras_require]
dev =
	graphviz >= 0.20, < 1
	ipython >= 8.14, < 9
	pre-commit >= 3.3, < 4
	pytest >= 7.4, < 8
    pytest-cov
	sphinx >= 7.2, < 8
	tox >= 4.6, < 5
	matplotlib >= 3.7, < 4
	scikit-image >= 0.21, < 1
	pydata_sphinx_theme >= 0.13, < 1
	sphinx_design >= 0.4.1, < 1
	sphinx_copybutton >= 0.5.2, < 1
	sphinx_codeautolink >= 0.15.0, < 1
	sphinx_togglebutton >= 0.3.2, < 1
	nbsphinx  >= 0.9.0, < 1
_gpu =
	nvidia-pyindex
	cupy-cuda12x
	cutensor-cu12
	nvidia-cudnn-cu12
	nvidia-cusparse-cu12
	nvidia-nccl-cu12
fft =
	finufft >= 2.1, < 3
fft_gpu =
	nvidia-cufft-cu12

[flake8]
max-complexity = 10
exclude =
	# __init__.py often contain weird code to import top-level items.
	__init__.py
extend-ignore =
	# We follow Black's guidelines here.
	# E501: line too long
	# E203: whitespace before ':'
	# E302: expected 2 blank lines, found 1
	E501
	E203
	E302

	# Do not use lambda expressions. (OK when used sparringly.)
	E731

	# Too many leading '#' for block comment.
	# We use more '#' terms at times to improve visual delimiters of long block comments.
	E266

	# Implementation is too complex.
	# (Sometimes necessary in scientific code.)
	C901
